	* il_dicom.c: Added DICOM loading for uncompressed formats and little endian data.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_dicom.c to source line.
	* il_dicom.c: Added DICOM support for big endian data.
	* test/in/tiff: Removed this directory.
	* il_rot.c: Added this file.  Added .rot loading.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_rot.c to source line.

2009-02-15 Matěj Týč <bubla@users.sf.net>
	* src-ILU/ilur: Added the ilur - commandline ILU frontend
	* bin, examples/Makefile.am: Moved examples's Makefile.am to bin
	directory. Added ilur to it.
	* docs/DevIL_manual.texi: Made slight syntax corrections, fixed the
	sample program and added functions index

2009-02-14 Denton Woods <doomwiz@users.sf.net>
	* il_blp.c (iLoadBlp1): Support for mipmaps added.
	* il_gif.h: Moved iCopyPalette declaration out of here into il_internal.h.
	* il_gif.c: Moved iCopyPalette definition out of here into il_pal.c.
	* projects/Mathematica: Added this folder.	
	* il_fits.c (iCheckFits): Implemented this.
	* il_fits.c (iLoadFitsInternal): Renormalized float and double data.
	* il_blp.c (iLoadBlp1): Added seeks to image data (not necessarily following palette).
	* il_blp.c (iLoadBlpInternal): Added loading for BLP2 RAW with 1-bit alpha.

2009-02-13 Denton Woods <doomwiz@users.sf.net>
	* WindowsTest.cpp: Added slideshows capabilities with Page Up and Page Down.
	* il_jpeg.c:357: Added ilFixImage call.
	* il_jpeg.c (ilLoadFromJpegStruct): Changed return value to the return of ilFixImage.
	* il_blp.c:466-467: Fixed to read these images properly.
	* WindowsTest Project: Changed x64 debug to use runtime library debug DLLs.

2009-02-12 Denton Woods <doomwiz@users.sf.net>
	* il_ftx.c: Added this file.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_ftx.c to source line.
	* il_io.c: Added Ftx loading function calls.
	* il_blp.c: Added BLP1-loading functions.

2009-02-11 Denton Woods <doomwiz@users.sf.net>